# eits_cyberplan

./: .env.example  .gitignore  AGENT.md  Makefile  PRD.md  README-DEPLOY.md  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  fix_env.py  run-dev.py  start-dev.sh
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 095e742d6556_merge_add_bp_division_id.py  10c105bdb0dc_add_mapped_module_id_to_imr_items.py  1167f622e501_add_soft_delete_to_bp_module_mappings.py  117cf82799ad_merge_bp_dependencies_and_target_object_.py  120e01d715df_add_audit_fields_to_imr_items.py  15dd342acd17_merge_all_heads.py  170d56dff76b_add_imr_snapshots.py  31420c85e7b9_merge_heads.py  47a801ddd3a5_merge_all_heads.py  53daea59fbb8_add_division_id_to_business_processes_.py  59ba4f69c258_add_is_active_to_alerts.py  75d23bd52ea3_merge_remaining_heads.py  985a4a218e24_merge_all_heads.py  9f13a6c8d445_add_division_model_and_tenant_company_.py  add_app_tenant_divisions.py  add_app_tenant_org_fields.py  add_asset_is_core_field.py  add_asset_relation_types_v1.py  add_asset_remarks.py  add_bp_dependencies.py  add_bp_division_id.py  add_evidence_file_hash.py  add_evidence_file_stats.py  add_imr_requirement_profile_fields.py  add_organization_people.py  add_permissions_role_permissions.py  add_person_fk_restrict.py  add_scope_modeling.py  add_soft_delete_columns.py  add_target_object_fields.py  (+27 more)
backend/app/: main.py
backend/scripts/: backfill_evidence_stats.py  etl_eits_catalog.py  requirements_etl.txt
backend/tests/: conftest.py
(+268 files in other folders)
